# ITCubeHackBackend

./: README.md  docker-compose.yml  example.env  pyproject.toml
alembic/: env.py
alembic/versions/: 0f9d688f4096_news.py  17d9ea50d812_increase_title_length.py  443b689475e1_init.py  5dd567c215fb_relationship.py  c081d233c254_reviews.py
app/: app.py  constraints.py  env.py  interfaces.py  ioc.py  utils.py
app/adapters/: __init__.py
app/adapters/domain/: __init__.py  announcement_database_adapter.py  instructor_database_adapter.py  media_database_adapter.py  news_database_adapter.py  news_gallery_item_database_adapter.py  study_direction_database_adapter.py  study_direction_review_database_adapter.py  study_program_database_adapter.py
app/adapters/dto/: __init__.py  announcement_domain_adapter.py  instructor_domain_adapter.py  media_domain_adapter.py  news_brief_domain_adapter.py  news_domain_adapter.py  study_direction_brief_domain_adapter.py  study_direction_domain_adapter.py  study_direction_review_domain_adapter.py  study_program_domain_adapter.py
app/controllers/: __init__.py
app/controllers/http/: __init__.py  announcement_controller.py  exception_handlers.py  instructor_controller.py  news_controller.py  storage_controller.py  (+1 more)
app/database/: __init__.py
app/providers/: __init__.py  config_provider.py  database_provider.py  repository_provider.py  s3_provider.py
app/repositories/: __init__.py  announcement_repository.py  instructor_repository.py  media_repository.py  news_repository.py  study_repository.py
app/types/: __init__.py  config.py
(+44 files in other folders)
